# pepperpy-ai

./: .bandit  .coveragerc  .cursorignore  .cursorrules  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  001-coding-standards.mdc  ARCHITECTURE.md  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DOMAIN_FILE_CONVENTIONS.md  DOMAIN_STANDARDIZATION.md  DOMAIN_STANDARDIZATION_README.md  Dockerfile  Dockerfile.examples  LICENSE  MANIFEST.in  MIGRATION-NOTES.md  MIGRATION_PLAN.md  README.md  README_REFACTORING.md  RELEASE_NOTES.md  RESTRUCTURING.md  RESTRUCTURING_SUMMARY.md  SUMMARY.md  TASK-004.md  TECHNICAL_SPECS.md  VALIDATION_CONSOLIDATION_SUMMARY.md  azure-pipelines.yml  bitbucket-pipelines.yml  check_astor.py  cli_plugins_consolidation_report.md  (+49 more)
.architecture/decisions/: 0001-initial-architecture.md  template.md  (+1 more)
.cursor/: INSTRUCTIONS.md  governance.yaml
.github/: pull_request_template.md
.pepperpy/: config.yml
.product/: EXAMPLES_VALIDATION_REPORT.md  EXAMPLE_STANDARDS.md  KNOWLEDGE_BASE.md  SPECIFICATION.md  architecture.mermaid  current_structure.txt  kanban.md  project_structure.yml  specification.md  status.md
api/: README.md  app.py  dependencies.py  main.py  middleware.py
config/: aws.yml.template
docs/: 000-architecture-principles.mdc  ARCHITECTURE.md  PLUGIN_MIGRATION.md  README.md  REGISTRY_USAGE_GUIDE.md  TASK-005.md  agent_topologies.md  agents.md  ai_knowledge_base.md  api_reference.md  api_update.md  architecture.mermaid  caching_architecture.md  capabilities.md  concepts.md  config_schema.md  configuration.md  core_concepts.md  dependencies.md  evaluation_framework.md  events.md  federation_topology.md  getting_started.md  import_optimization.md  improvements.md  index.md  installation.md  interfaces.md  mcp_topology.md  migration_guide.md  module_standardization.md  modules.md  observability_relationship.md  observer_topology.md  plugin-implementation-guide.md  plugin-testing.md  plugin_implementation_guide.md  plugin_implementation_summary.md  plugin_structure.md  plugin_system.md  (+20 more)
examples/: README.md  README_EXAMPLES.md  README_document_processing.md  __init__.py  a2a_simulation_example.py  advanced_document_processing.py  agent_capabilities.py  agent_with_memory.py  agents_creative_collaboration_example.py  agents_dev_assistant_example.py  agents_example.py  agents_research_assistant_example.py  agents_with_creative_writing_example.py  agents_with_personalities_example.py  ai_learning_assistant_example.py  api_example.py  api_expert.py  api_integration_example.py  autogen_example.py  basic_chat.py  basic_test.py  batching_example.py  benchmarking_example.py  bi_assistant_example.py  cache_example.py  cached_embedding.py  cached_workflow.py  chainable_api_example.py  chat_example.py  chatbot_example.py  collaborative_research.py  complete_example.py  complete_plugin_system_example.py  config.py  config_example.py  connection_pooling_example.py  content_example.py  content_generation_example.py  content_processing_example.py  content_processing_workflow_example.py  (+131 more)
instructions/: project_guideline.md  structure_target.md
pepperpy/: README.md  TASK-012.md  __init__.py  __main__.py  apps.py  async_utils.py  builder.py  cache.py  capabilities.py  cli.py  client.py  config.py  core.py  di.py  embeddings.py  errors.py  events.py  factory.py  github.py  hub.py  interfaces.py  lifecycle.py  llm.py  main.py  memory.py  messages.py  migration.py  monitoring.py  observability.py  pepperpy.py  plugin.py  plugin_manager.py  plugins.py  prompt_template.py  registry.py  responses.py  storage.py  types.py  workflows.py
pepperpy_ai/: __init__.py  ai_types.py  client.py  exceptions.py  functions.py  responses.py  roles.py  templates.py  types.py  utils.py
playground/: README.md  app.py
playground_web/: README.md  app.py  mock_api_service.py  run.py
plugin_template/: README.md  provider.py
plugins/: README.md  __init__.py
plugins/llm/openai/: plugin.yaml  provider.py  pyproject.toml
plugins/llm/openai/pepperpy_llm_openai/: provider.py
prompts/: README.md
resources/: code_analysis.json  code_review.json  example_prompt.json  example_workflow.json  test_generation.json  test_prompt.json
scripts/: README.md  README_LINT.md  analyze.sh  analyze_code_quality.py  analyze_lint_errors.py  analyze_security.py  batch_fix_plugins.py  batch_plugin_fixer.py  check.sh  check_circular_deps.py  check_domain_conventions.py  check_domains.sh  check_naming.py  check_pylance_errors.py  check_registry_compliance.py  check_stubs_coverage.py  clean.sh  cleanup_empty_modules.py  cleanup_providers.py  cleanup_redundant_modules.py  code_analyzer.py  complete_consolidation.py  consolidate_base_files.py  consolidate_cache.py  consolidate_duplicates.sh  consolidate_modules.py  consolidate_providers.py  consolidate_registries.sh  consolidate_registry.py  context_validator.py  create_plugin.py  execute_provider_consolidation_plan.py  export.sh  export_structure.py  fix_agent_py.py  fix_attribute_errors.py  fix_audio_providers_syntax.py  fix_auto_fixable_errors.py  fix_b904_errors.sh  fix_caching_distributed.py  (+111 more)
stories/: 047593e7-4282-4f8a-9744-972d83e18a63.txt  390dee52-ee32-4e95-9adf-a3675cb353dd.txt  7e4b220d-580b-4339-8fd0-fd761ef44f09.txt
tasks/: TASK-014-R002.md
temp/: REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  test_imports.py
tests/: __init__.py  conftest.py  docker-compose.yml  providers.py  requirements.txt  test_caching.py  test_capabilities_base.py  test_chunking.py  test_cli_agent.sh  test_composition.py  test_config.py  test_conversation.py  test_embedding.py  test_embeddings.py  test_errors.py  test_exceptions.py  test_features.py  test_llm.py  test_openrouter.py  test_pepperpy.py  test_prompt_template.py  test_providers.py  test_rag.py  test_redis_cache.py  test_simple.py  test_state_simple.py  test_tools.py  test_tts.py  test_types.py  test_usage_patterns.py  test_utils.py  utils.py
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+3946 files in other folders)
