[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pepperpy.pipeline.base"
ignore_errors = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["annoy.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "--cov=pepperpy --cov-report=term-missing"

[tool.poetry]
name = "pepperpy"
version = "0.1.0"
description = "A Pythonic Framework for AI Agents and LLM Capabilities"
authors = ["PepperPy Team <jpimentel.ai@gmail.com>"]
readme = "README.md"
packages = [{ include = "pepperpy" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
aiohttp = "^3.11.16"
diskcache = "^5.6.3"
httpx = "^0.28.1"
importlib-metadata = "^8.6.1"
jsonschema = "^4.23.0"
loguru = "^0.7.3"
pydantic = "^2.11.1"
python-dotenv = "^1.1.0"
pyyaml = "^6.0.2"
tenacity = "^9.1.2"
uv = "^0.6.12"
xxhash = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
ruff = "^0.11.2"


[tool.coverage.run]
source = ["pepperpy"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
