[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pepperpy-llm-openai"
version = "0.1.0"
description = "OpenAI provider plugin for PepperPy LLM domain"
readme = "README.md"
authors = [{ name = "PepperPy Team" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["openai>=1.0.0", "pepperpy>=0.1.0"]

[project.optional-dependencies]
dev = ["black", "isort", "mypy", "pytest", "pytest-asyncio"]

[tool.setuptools]
packages = ["pepperpy_llm_openai"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
